[tool.poetry]
name = "my_telebot"
version = "0.1.0"
description = "Bot using the library pyTelegramBotAPI"
authors = ["BuGalter <wardoc78@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
